--- a/charts/cluster-gateway/templates/clusterrolebindings.yaml
+++ b/charts/cluster-gateway/templates/clusterrolebindings.yaml
@@ -10,3 +10,17 @@ subjects:
   - kind: ServiceAccount
     name: cluster-gateway
     namespace: {{ .Release.Namespace }}
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: cluster-gateway-auth-delegator
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: system:auth-delegator
+subjects:
+  - kind: ServiceAccount
+    name: cluster-gateway
+    namespace: {{ .Release.Namespace }}
