add proxy and health rbac

--- a/charts/cluster-gateway/templates/clusterroles.yaml
+++ b/charts/cluster-gateway/templates/clusterroles.yaml
@@ -43,3 +43,10 @@ rules:
       - subjectaccessreviews
     verbs:
       - "*"
+  - apiGroups:
+      - cluster.core.oam.dev
+    resources:
+      - clustergateways/proxy
+      - clustergateways/health
+    verbs:
+      - "*"
